--- a/css/admin.css
+++ b/css/admin.css
@@ -112,8 +112,48 @@ header h1 {
 .menu-list, .tables-container, .order-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
     margin-top: 10px;
+    list-style-type: none;
+}
+
+.table-list{
+    background: #c4c4c4;
+    padding: 20px 30px 20px 30px;
+    border-radius: 15px;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.menu-card{
+    background: #c4c4c4;
+    padding: 20px 40px;
+    border-radius: 15px;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+button {
+    background: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    width: 100%;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+button:hover {
+    background: #0056b3;
+    transform: scale(1.05);
 }
 
 /* Responsive Design */
@@ -139,6 +179,11 @@ header h1 {
     flex-direction: column;
     gap: 20px;
     margin-top: 10px;
+}
+
+.form-group{
+    flex: 1 1 100%;
+    gap: 10px;
 }
 
 .order-item {
